fixed incorrect spacing on grid

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ main{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin: 0 0 112px 0;
+
 
 }
 
